--- a/mockito/pom.xml
+++ b/mockito/pom.xml
@@ -12,7 +12,7 @@
 	<parent>
         <groupId>be.eliwan</groupId>
 		<artifactId>jfaker</artifactId>
-		<version>0.1-SNAPSHOT</version>
+		<version>0.1</version>
 	</parent>
     <artifactId>jfaker-mockito</artifactId>
     <description>jFaker for mockito</description>
